# EventTrakka-Backend

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  hello.py  pyproject.toml
app/: enums.py  main.py  managers.py
app/api/: deps.py  main.py
app/api/routes/: attendees.py  auth.py  events.py  organizations.py  users.py
app/core/: config.py  db.py  email_config.py  email_service.py  security.py  utils.py
app/email-templates/: forgot-password.html  reset-password.html  verify-email.html
app/extras/: email_test_server.py  models.py
app/migrations/: env.py
app/migrations/versions/: 1f58a379c779_init_tables.py  4a3ea87e5ff3_init_migrations.py  5f2db2436c6f_make_organization_names_unique.py  9082aa0b3338_create_user.py  b44971dc8be4_init.py  cf36dc99cf72_create_user.py  d72f5539fe2c_rename_timestamp_fields.py  ffa7c36a3d5b_create_otp_model.py
app/models/: __init__.py  attendees.py  events.py  exceptions.py  organizations.py  otp.py  tags.py  users.py
app/models/managers/: base_manager.py  events.py  organizations.py  otp.py  users.py
app/models/schemas/: api.py  events.py  organizations.py  users.py
